navigation: set width fixing the alignment

--- a/packages/block-library/src/navigation/style.scss
+++ b/packages/block-library/src/navigation/style.scss
@@ -82,6 +82,7 @@ $navigation-min-height: 60px;
 	> .wp-block-navigation__container {
 		min-height: $navigation-min-height;
 		align-items: center;
+		width: 100%;
 
 		> .wp-block-navigation-link {
 			display: flex;
